--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚡</text></svg>">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏙️</text></svg>">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1" />
   <meta name="theme-color" content="#000000" />
   <!--
     manifest.json provides metadata used when your web app is installed on a
